; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_filemodes.c_add_and_check_mode_.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_filemodes.c_add_and_check_mode_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [24 x i8] c"Cannot find index entry\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"Expected mode does not match index\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"%07o\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32, i8*, i32)* @add_and_check_mode_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_and_check_mode_(i32* %0, i8* %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = call i32 @git_index_add_bypath(i32* %13, i8* %14)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32*, i32** %6, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @git_index_find(i64* %11, i32* %17, i8* %18)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = zext i1 %21 to i32
  %23 = load i8*, i8** %9, align 8
  %24 = load i32, i32* %10, align 4
  %25 = call i32 @clar__assert(i32 %22, i8* %23, i32 %24, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32* null, i32 1)
  %26 = load i32*, i32** %6, align 8
  %27 = load i64, i64* %11, align 8
  %28 = call %struct.TYPE_3__* @git_index_get_byindex(i32* %26, i64 %27)
  store %struct.TYPE_3__* %28, %struct.TYPE_3__** %12, align 8
  %29 = load i8*, i8** %9, align 8
  %30 = load i32, i32* %10, align 4
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %12, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = trunc i64 %33 to i32
  %35 = load i32, i32* %8, align 4
  %36 = call i32 @clar__assert_equal(i8* %29, i32 %30, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i32 1, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 %34, i32 %35)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_index_add_bypath(i32*, i8*) #1

declare dso_local i32 @clar__assert(i32, i8*, i32, i8*, i32*, i32) #1

declare dso_local i32 @git_index_find(i64*, i32*, i8*) #1

declare dso_local %struct.TYPE_3__* @git_index_get_byindex(i32*, i64) #1

declare dso_local i32 @clar__assert_equal(i8*, i32, i8*, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
